the great think

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,3 @@
-окно должно давать обертку для лямбд
-окно должно быть в отдельной папке
-окно должно быть привязано к draw
+rethink categories
 
-singleton
+CUI culling
